# PCRemoteControl

./: .gitignore  .gitmodules
.github/workflows/: build_project.yml
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/PCRemoteControl/: CMakeLists.txt  RemoteControlHttp.pro  apihandler.cpp  apihandler.h  commandcodes.cpp  commandcodes.h  httpserverholder.cpp  httpserverholder.h  images.qrc  main.cpp  mainhandlerfactory.cpp  mainhandlerfactory.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_pch.h  settingsinfo.cpp  settingsinfo.h  winapifunctions.cpp  winapifunctions.h  www.qrc
